# active10-backend

./: .dockerignore  .gitignore  .pre-commit-config.yaml  .secrets.baseline  CONTRIBUTING.md  Dockerfile  LICENSE.md  Makefile  README.md  alembic.ini  docker-compose.yml  entrypoint.sh  main.py  pyproject.toml  requirements-dev.txt  requirements.txt  sonar-project.properties
.github/workflows/: build.yml  build_release.yml  dev_ecs_deploy.yml  release.yml  sonarcloud.yml  sonarcloud.yml.disable  tests.yml
api/: healthcheck.py  nhs_login.py  unsubscribe.py
api/v1/: activities.py  activity_level.py  auth.py  daily_target.py  data_migrations.py  gojauntly.py  motivation.py  router.py  users.py  walking_plans.py  webhooks.py
api/v2/: activities.py  data_migrations.py  router.py
auth/: auth_bearer.py  jwt_handler.py
crud/: activities_crud.py  activity_crud.py  activity_level_crud.py  daily_target_crud.py  motivation_crud.py  subscription_crud.py  token_crud.py  user_crud.py  walking_plan_crud.py
db/: session.py
db/migrations/: env.py
db/migrations/versions/: 0c439e91d173_updated_delete_user_stored_procedure.py  144c901acf82_postcode_is_nullable.py  162a50d9f084_add_stored_procedure_to_fetch_users_.py  362e0eca0a77_user_motivation_goals.py  378130beea63_activities_default_partition_name_update.py  54ad936f75da_activities_partitioned_by_date.py  57b621f6cb22_initial_migrations.py  60c543022791_user_walking_plan.py  6342e38b112b_update_get_users_with_status_logout_.py  64189cfb3dc7_initial_migration.py  7263272bfea3_user_authentication_status_and_delete_.py  788f862ac2be_fk_attribute_ondelete_added___target_.py  89c973ee4474_activity_data_type_correction.py  98c4905bc4df_user_token_management.py  aa8451fd521c_create_scheduled_batches_table.py  b305b691c836_create_user_activity_level_table.py  b33e91c25011_user_activity_level.py  b70ab50e1bd2_added_email_preferences_model.py  b9643b0c1602_user_daily_target.py  c997a5bc5c1d_rename_some_activities_table_columns.py  cc9ba9e54c42_add_delete_user_stored_procedure.py  db63c9e47010_email_notification_logs.py  f8144e34eabc_initial_migrations.py
gojauntly/: gojauntly.py
localstack_bootstrap/: sns_bootstrap.sh  sqs_bootstrap.sh
models/: __init__.py  activity.py  activity_level.py  daily_target.py  email_notification.py  motivation.py  user.py  walking_plan.py
nhs/: authenticator.py  pds.py
nhs_auth_service/: .env.example  README.md  alembic.ini  docker-compose-dev.yml  requirements.txt
nhs_auth_service/app/: main.py
nhs_auth_service/app/alembic/: env.py
nhs_auth_service/app/alembic/versions/: 852f6817d9f0_initial_migratoions_for_microservice.py
nhs_auth_service/app/api/: deps.py  nhs_login.py  v1_router.py
nhs_auth_service/app/api/v1/: user.py
nhs_auth_service/app/core/: config.py  security.py
nhs_auth_service/app/cruds/: subscription_crud.py  token_crud.py
nhs_auth_service/app/db/: session.py
nhs_auth_service/app/models/: __init__.py  user.py
nhs_auth_service/app/nhs/: authenticator.py
nhs_auth_service/app/schemas/: user.py
nhs_auth_service/app/services/: nhs_login_service.py  user_service.py
nhs_auth_service/scripts/: start-backend.sh
nhs_auth_service/tests/: __init__.py
nhs_auth_service/tests/unittest/: test_users.py
schemas/: activity.py  activity_level.py  daily_target.py  gojauntly.py  migrations_schema.py  motivation.py  user.py  walking_plan.py
scripts/: activities_partitioning.py
service/: activity_service.py  auth_service.py  aws_sns_service.py  aws_sqs_service.py  migrations_service.py  nhs_login_service.py  redis_service.py  user_service.py  webhook_service.py
static/css/: styles.css
static/js/: script.js
templates/: unsubscribe.html
tests/: conftest.py  test_activities.py  test_auth_disconnect.py  test_auth_logout.py  test_daily_target.py  test_data_migrations.py  test_nhs_login.py  test_smoke.py  test_users.py  test_walking_plan.py  tests.env
tests/integration/: test_nhs_login.py
tests/unittest/: conftest.py  test_activities.py  test_activity_level.py  test_auth_cache.py  test_daily_target.py  test_data_migrations.py  test_motivation.py  test_nhs_login.py  test_users.py  test_walking_plan.py
user_management/: .env.example  Dockerfile  README.md  docker-compose-dev.yml  requirements.txt
user_management/app/: main.py
user_management/app/api/: deps.py  nhs_login.py
user_management/app/api/v1/: user.py
user_management/app/core/: config.py  logger.py  security.py
user_management/app/cruds/: token_crud.py  user_crud.py
user_management/app/nhs/: authenticator.py  pds.py
user_management/app/services/: nhs_login_service.py  user_service.py
user_management/scripts/: start-backend.sh
user_management/tests/: tests.env
user_management/tests/integration/: test_nhs_login.py
user_management/tests/unittest/: conftest.py  test_nhs_login.py
utils/: base_config.py  webhook_utils.py
(+1 files in other folders)
