[build-system]
requires = ["setuptools>=64"]
build-backend = "setuptools.build_meta"

[project]
name = "active10-backend"
version = "0.0.0"
requires-python = ">=3.10"
dependencies = [
  "alembic==1.16.5",
  "annotated-types==0.7.0",
  "anyio==4.10.0",
  "async-timeout==5.0.1",
  "attrs==25.3.0",
  "beautifulsoup4==4.13.5",
  "behave==1.2.6",
  "boto3==1.40.26",
  "botocore==1.40.26",
  "certifi==2025.8.3",
  "cffi==1.17.1",
  "cfgv==3.4.0",
  "chardet==5.2.0",
  "charset-normalizer==3.4.3",
  "click==8.2.2",
  "colorama==0.4.6",
  "coverage==7.10.6",
  "cryptography==42.0.8",
  "cssselect==1.3.0",
  "defusedxml==0.7.1",
  "distlib==0.4.0",
  "dnspython==2.8.0",
  "email_validator==2.3.0",
  "exceptiongroup==1.3.0",
  "execnet==2.1.1",
  "fastapi==0.116.1",
  "fastapi-cli==0.0.11",
  "fasteners==0.20",
  "filelock==3.19.1",
  "future==1.0.0",
  "greenlet==3.2.4",
  "h11==0.16.0",
  "httpcore==1.0.9",
  "httptools==0.6.4",
  "httpx==0.28.1",
  "identify==2.6.14",
  "idna==3.10",
  "iniconfig==2.1.0",
  "Jinja2==3.1.6",
  "jmespath==1.0.1",
  "Mako==1.3.10",
  "markdown-it-py==4.0.0",
  "MarkupSafe==3.0.2",
  "mdurl==0.1.2",
  "mycdp==1.2.0",
  "nodeenv==1.9.1",
  "oic==1.7.0",
  "orjson==3.11.3",
  "outcome==1.3.0.post0",
  "packaging==25.0",
  "parameterized==0.9.0",
  "parse==1.20.2",
  "parse_type==0.6.6",
  "pdbp==1.7.1",
  "platformdirs==4.4.0",
  "pluggy==1.6.0",
  "pre-commit==4.3.0",
  "psycopg==3.2.10",
  "psycopg-binary==3.2.10",
  "py==1.11.0",
  "py4j==0.10.9.9",
  "pycparser==2.23",
  "pycryptodomex==3.23.0",
  "pydantic==2.11.7",
  "pydantic-settings==2.10.1",
  "pydantic_core==2.33.2",
  "Pygments==2.19.2",
  "pyjwkest==1.4.2",
  "PyJWT==2.10.1",
  "pynose==1.5.5",
  "pyotp==2.9.0",
  "PySocks==1.7.1",
  "pytest==8.4.2",
  "pytest-cov==7.0.0",
  "pytest-html==4.0.2",
  "pytest-metadata==3.1.1",
  "pytest-ordering==0.6",
  "pytest-rerunfailures==16.0.1",
  "pytest-xdist==3.8.0",
  "python-dateutil==2.9.0.post0",
  "python-dotenv==1.1.1",
  "python-http-client==3.3.7",
  "python-multipart==0.0.20",
  "python-xlib==0.33",
  "PyYAML==6.0.2",
  "requests==2.32.5",
  "redis==5.0.1",
  "rich==14.1.0",
  "s3transfer==0.13.1",
  "sbvirtualdisplay==1.4.0",
  "selenium==4.35.0",
  "seleniumbase==4.41.5",
  "sendgrid==6.12.4",
  "shellingham==1.5.4",
  "six==1.17.0",
  "sniffio==1.3.1",
  "sortedcontainers==2.4.0",
  "soupsieve==2.8",
  "SQLAlchemy==2.0.43",
  "SQLAlchemy-Utils==0.42.0",
  "starkbank-ecdsa==2.2.0",
  "starlette==0.47.3",
  "tabcompleter==1.4.0",
  "tomli==2.2.1",
  "trio==0.30.0",
  "trio-websocket==0.12.2",
  "typer==0.17.4",
  "typing_extensions==4.14.0",
  "ujson==5.11.0",
  "urllib3==2.5.0",
  "uvicorn==0.35.0",
  "uvloop==0.21.0",
  "virtualenv==20.34.0",
  "watchfiles==0.24.0",
  "websocket-client==1.8.0",
  "websockets==15.0.1",
  "wsproto==1.2.0",
]

[project.optional-dependencies]
dev = [
  "testcontainers==4.8.2",
  "psycopg2-binary==2.9.10",
]

[tool.pytest.ini_options]
testpaths = ["tests"]
python_files = ["tests/**/*.py"]

[tool.ruff]
target-version = "py311"
line-length = 100
exclude = [
  ".git",
  ".venv",
  "venv",
  "node_modules",
  "build",
  "dist",
  "migrations",
  "__pycache__",
]

[tool.ruff.lint]
select = ["E", "F", "I", "B", "UP", "SIM", "PL", "RUF"]
preview = false

# Ignore long lines in Django migration autogen files, etc.
[tool.ruff.lint.per-file-ignores]
"**/migrations/*.py" = ["E501", "F401", "F403"]

[tool.ruff.format]
line-ending = "lf"
indent-style = "space"
quote-style = "double"
docstring-code-format = true
skip-magic-trailing-comma = false
