[build-system]
requires = ["setuptools>=64"]
build-backend = "setuptools.build_meta"

[project]
name = "active10-backend"
version = "0.0.0"
requires-python = ">=3.10"

[tool.pytest.ini_options]
testpaths = ["tests"]
python_files = ["tests/**/*.py", "test_*.py"]
addopts = "--cov=gojauntly --cov=api --cov=nhs --cov=service --cov=crud --cov=models --cov=db --cov-report=term-missing --cov-branch"

[tool.coverage.run]
source = ["service","crud","models","db","api","gojauntly","auth","nhs"]
branch = true
omit = ["tests/*","**/migrations/*"]

[tool.coverage.report]
show_missing = true
omit = ["tests/*","**/migrations/*"]

[tool.setuptools]
packages = []
py-modules = []

[tool.ruff]
target-version = "py311"
line-length = 100
exclude = [
  ".git",
  ".venv",
  "venv",
  "node_modules",
  "build",
  "dist",
  "migrations",
  "__pycache__",
]

[tool.ruff.lint]
select = ["E", "F", "I", "B", "UP", "SIM", "PL", "RUF"]
preview = false

# Ignore long lines in Django migration autogen files, etc.
[tool.ruff.lint.per-file-ignores]
"**/migrations/*.py" = ["E501", "F401", "F403"]

[tool.ruff.format]
line-ending = "lf"
indent-style = "space"
quote-style = "double"
docstring-code-format = true
skip-magic-trailing-comma = false
